syntax = "proto3";

package project.planton.provider._test.testcloudresourceone.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/_test/testcloudresourceone/v1/spec.proto";
import "project/planton/provider/_test/testcloudresourceone/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

//test-cloud-resource-one
message TestCloudResourceOne {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = '_test.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'TestCloudResourceOne'];

  //metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  TestCloudResourceOneSpec spec = 4;

  //status
  TestCloudResourceOneStatus status = 5;
}

//test-cloud-resource-one status
message TestCloudResourceOneStatus {
  //stack-outputs
  TestCloudResourceOneStackOutputs outputs = 1;
}
