syntax = "proto3";

package project.planton.provider._test.testcloudresourceone.v1;

import "project/planton/shared/options/options.proto";

//TestCloudResourceOneSpec defines test configuration with comprehensive default values
message TestCloudResourceOneSpec {
  // String fields - one with default, one without
  optional string string_field = 1 [(project.planton.shared.options.default) = "default-string"];
  string string_no_default = 2;

  // Numeric fields with defaults
  optional int32 int32_field = 3 [(project.planton.shared.options.default) = "42"];
  optional int64 int64_field = 4 [(project.planton.shared.options.default) = "9999"];
  optional uint32 uint32_field = 5 [(project.planton.shared.options.default) = "100"];
  optional uint64 uint64_field = 6 [(project.planton.shared.options.default) = "50000"];

  // Float fields with defaults
  optional float float_field = 7 [(project.planton.shared.options.default) = "3.14"];
  optional double double_field = 8 [(project.planton.shared.options.default) = "2.718"];

  // Bool field with default
  optional bool bool_field = 9 [(project.planton.shared.options.default) = "true"];

  // Nested message with defaults
  TestNestedMessage nested = 10;
}

//TestNestedMessage tests nested message defaults
message TestNestedMessage {
  optional string nested_string = 1 [(project.planton.shared.options.default) = "nested-default"];
  optional int32 nested_int = 2 [(project.planton.shared.options.default) = "99"];
}
